--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i|Roboto+Mono:300,400,700|Roboto+Slab:300,400,700"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <!-- Add Material CSS, replace Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/daemonite-material@4.1.1/css/material.min.css"
